--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/coding-events
 spring.datasource.username=coding_events
 spring.datasource.password=ConnectDB2
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -14,4 +15,4 @@ spring.jpa.hibernate.ddl-auto = update
 
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager)
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
