--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/coding-events
+spring.datasource.url=jdbc:mysql://localhost:3306/coding_events
 spring.datasource.username=coding_events
 spring.datasource.password=ConnectDB2
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
